# try_fastapi

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile_python  devcontainer.json  docker-compose.yml
app/api/: db.py  main.py  migrate_db.py
app/api/cruds/: done.py  tasks.py
app/api/models/: tasks.py
app/api/routers/: done.py  task.py
app/api/schemas/: task.py
