[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Keisuke Yamanaka <vaivailx@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pymysql = "^1.1.0"
aiomysql = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"